# EMS

./: .env  .gitignore  Cargo.toml
src/: db.rs  errors.rs  handlers.rs  main.rs  routers.rs
src/db/: db_models.rs  schema.rs
src/handlers/: post_templates.rs  post_users.rs
