[package]
authors = ["Kozoriz Konstantin <kkozoriz7@yandex.ru>"]
name = "EMS"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/kkozoriz/EMS.git"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.203", features = ["derive"] }
anyhow = "1.0.86"
diesel = { version = "2.1.6", features = ["postgres", "chrono", "r2d2"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.38", features = ["serde"] }
axum-macros = "0.4.1"
tracing = "0.1.40"
